# prisoners-dilemna

./: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tailwind.css  tsconfig.json
.github/workflows/: deploy.yml
js/: build.sh
js/core/: index.ts  package.json  rolldown.config.js
js/core/src/: index.ts
js/editor/: index.ts  package.json  rolldown.config.js
js/editor/src/: index.ts  server.ts
src/: bindings.rs  choice.rs  duel.rs  ext.rs  history.rs  id.rs  layout.rs  lib.rs  main.rs  player.rs  router.rs  state.rs  status.rs  strategies.rs  strategy.rs  turns.rs  view.rs
src/components/: editor.rs  icon.rs  layout.rs  mod.rs
src/components/duels/: choices.rs  mod.rs  player.rs
src/components/strategies/: entry.rs  list.rs
src/duel/: duellist.rs  outcome.rs
src/models/: choice.rs  duel.rs  mod.rs  player.rs  strategy.rs
src/models/strategy/: native_impl.rs
src/router/: duel.rs  index.rs  other.rs  strategies.rs
src/strategies/: random.rs  simple.rs
