[package]
name = "prisoners-dilemna"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = { version = "0.11.0", features = ["console"] }
implicit-clone = { version = "0.5.0", features = ["map", "serde"] }
wasm-bindgen = "0.2.100"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
