[package]
name = "prisoners-dilemna"
version = "0.1.0"
edition = "2021"

[features]
hash-router = []

[dependencies]
gloo = { version = "0.11.0", features = ["console"] }
implicit-clone = { version = "0.5.0", features = ["map", "serde"] }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Element"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
